examples/test/testpolicy19427.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19427
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key39: value9
      key33: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value15
          key9: value21
          key46: value30
      podSelector:
        matchLabels:
          key44: value2
          key35: value44
